// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NetworkingPortSettingModal should match snapshot in create state 1`] = `
<body>
  <div>
    <div
      class="p-5"
    >
      <h2
        class="h4 max-w-sm truncate text-neutral"
      >
        Set port
      </h2>
      <button
        aria-controls="radix-:r6:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="hover:text-brandHover mt-2 cursor-pointer text-sm font-medium text-brand transition"
        data-state="closed"
        type="button"
      >
        Show how it works 
        <i
          aria-hidden="true"
          class="fa-regular fa-circle-question text-xs"
        />
      </button>
      <form
        class="mt-6"
      >
        <div
          class="flex flex-col gap-5"
        >
          <div
            class=""
            data-testid="input-text-wrapper"
          >
            <div
              class="relative"
            >
              <div
                aria-label="input-container"
                class="input group     "
              >
                <div
                  class=""
                >
                  <label
                    class="translate-y-2 text-sm"
                    for="Service name"
                  >
                    Service name
                  </label>
                  <input
                    class="input__value "
                    data-testid="input-text"
                    id="Service name"
                    name="service_name"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class=""
          >
            <div
              class="input input--select    "
              data-testid="select"
            >
              <label
                class="!translate-y-0 !text-xs"
                for="Select protocol"
              >
                Select protocol
              </label>
              <div
                class=" css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-2-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class="input-select__control css-13cymwt-control"
                >
                  <div
                    class="input-select__value-container input-select__value-container--has-value css-1fdsijx-ValueContainer"
                  >
                    <span
                      class="mr-1 text-sm text-neutral"
                    >
                      HTTP
                    </span>
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      aria-haspopup="true"
                      aria-readonly="true"
                      class="css-mohuvp-dummyInput-DummyInput"
                      id="Select protocol"
                      inputmode="none"
                      role="combobox"
                      tabindex="0"
                      value=""
                    />
                  </div>
                  <div
                    class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="input-select__indicator-separator css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="Select protocol"
                  type="hidden"
                  value="HTTP"
                />
              </div>
              <input
                name="Select protocol"
                type="hidden"
                value="HTTP"
              />
              <div
                class="pointer-events-none absolute right-4 top-1/2 -translate-y-1/2"
              >
                <i
                  aria-hidden="true"
                  class="fa-solid fa-angle-down text-sm text-neutral-subtle"
                />
              </div>
            </div>
          </div>
          <div
            class=""
            data-testid="input-text-wrapper"
          >
            <div
              class="relative"
            >
              <div
                aria-label="input-container"
                class="input group input--disabled input--disabled !border-neutral  input--label-up "
              >
                <div
                  class="pointer-events-none"
                >
                  <label
                    class="translate-y-2 text-sm"
                    for="External port"
                  >
                    External port
                  </label>
                  <input
                    class="input__value "
                    data-testid="input-text"
                    disabled=""
                    id="External port"
                    name="external_port"
                    type="number"
                    value="443"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class=""
            data-testid="input-text-wrapper"
          >
            <div
              class="relative"
            >
              <div
                aria-label="input-container"
                class="input group     "
              >
                <div
                  class=""
                >
                  <label
                    class="translate-y-2 text-sm"
                    for="Namespace (optional)"
                  >
                    Namespace (optional)
                  </label>
                  <input
                    class="input__value "
                    data-testid="input-text"
                    id="Namespace (optional)"
                    name="namespace"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="mb-1"
              data-testid="input-text-wrapper"
            >
              <div
                class="relative"
              >
                <div
                  aria-label="input-container"
                  class="input group     "
                >
                  <div
                    class=""
                  >
                    <label
                      class="translate-y-2 text-sm"
                      for="Port name"
                    >
                      Port name
                    </label>
                    <input
                      class="input__value "
                      data-testid="input-text"
                      id="Port name"
                      name="name"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <p
              class="mb-5 ml-3 text-xs text-neutral-350"
            >
              Port Name allows to customize the subdomain assigned to reach the application
port from the internet. Default value is p&lt;port_number&gt;-&lt;service_name&gt;
            </p>
          </div>
        </div>
        <div
          class="mt-6 flex justify-end gap-3"
        >
          <button
            class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-sm h-10 px-3 rounded-lg text-neutral-subtle hover:bg-surface-neutral-subtle"
            data-testid="cancel-button"
            type="button"
          >
            Cancel
          </button>
          <button
            class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-brand-strong text-sm h-10 px-3 rounded-lg bg-surface-brand-solid hover:bg-surface-brand-solidHover border border-brand-component text-neutralInvert"
            data-testid="submit-button"
            disabled=""
            type="submit"
          >
            Create
          </button>
        </div>
      </form>
    </div>
  </div>
</body>
`;

exports[`NetworkingPortSettingModal should match snapshot in edit state 1`] = `
<body>
  <div>
    <div
      class="p-5"
    >
      <h2
        class="h4 max-w-sm truncate text-neutral"
      >
        Edit port
      </h2>
      <button
        aria-controls="radix-:rd:"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="hover:text-brandHover mt-2 cursor-pointer text-sm font-medium text-brand transition"
        data-state="closed"
        type="button"
      >
        Show how it works 
        <i
          aria-hidden="true"
          class="fa-regular fa-circle-question text-xs"
        />
      </button>
      <form
        class="mt-6"
      >
        <div
          class="flex flex-col gap-5"
        >
          <div
            class=""
            data-testid="input-text-wrapper"
          >
            <div
              class="relative"
            >
              <div
                aria-label="input-container"
                class="input group    input--label-up "
              >
                <div
                  class=""
                >
                  <label
                    class="translate-y-2 text-sm"
                    for="Service name"
                  >
                    Service name
                  </label>
                  <input
                    class="input__value "
                    data-testid="input-text"
                    id="Service name"
                    name="service_name"
                    type="text"
                    value="My service"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class=""
            data-testid="input-text-wrapper"
          >
            <div
              class="relative"
            >
              <div
                aria-label="input-container"
                class="input group    input--label-up "
              >
                <div
                  class=""
                >
                  <label
                    class="translate-y-2 text-sm"
                    for="Service port"
                  >
                    Service port
                  </label>
                  <input
                    class="input__value "
                    data-testid="input-text"
                    id="Service port"
                    name="internal_port"
                    type="number"
                    value="1234"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class=""
          >
            <div
              class="input input--select    "
              data-testid="select"
            >
              <label
                class="!translate-y-0 !text-xs"
                for="Select protocol"
              >
                Select protocol
              </label>
              <div
                class=" css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-3-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class="input-select__control css-13cymwt-control"
                >
                  <div
                    class="input-select__value-container input-select__value-container--has-value css-1fdsijx-ValueContainer"
                  >
                    <span
                      class="mr-1 text-sm text-neutral"
                    >
                      HTTP
                    </span>
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      aria-haspopup="true"
                      aria-readonly="true"
                      class="css-mohuvp-dummyInput-DummyInput"
                      id="Select protocol"
                      inputmode="none"
                      role="combobox"
                      tabindex="0"
                      value=""
                    />
                  </div>
                  <div
                    class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="input-select__indicator-separator css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="Select protocol"
                  type="hidden"
                  value="HTTP"
                />
              </div>
              <input
                name="Select protocol"
                type="hidden"
                value="HTTP"
              />
              <div
                class="pointer-events-none absolute right-4 top-1/2 -translate-y-1/2"
              >
                <i
                  aria-hidden="true"
                  class="fa-solid fa-angle-down text-sm text-neutral-subtle"
                />
              </div>
            </div>
          </div>
          <div
            class=""
            data-testid="input-text-wrapper"
          >
            <div
              class="relative"
            >
              <div
                aria-label="input-container"
                class="input group input--disabled input--disabled !border-neutral  input--label-up "
              >
                <div
                  class="pointer-events-none"
                >
                  <label
                    class="translate-y-2 text-sm"
                    for="External port"
                  >
                    External port
                  </label>
                  <input
                    class="input__value "
                    data-testid="input-text"
                    disabled=""
                    id="External port"
                    name="external_port"
                    type="number"
                    value="443"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class=""
            data-testid="input-text-wrapper"
          >
            <div
              class="relative"
            >
              <div
                aria-label="input-container"
                class="input group    input--label-up "
              >
                <div
                  class=""
                >
                  <label
                    class="translate-y-2 text-sm"
                    for="Namespace (optional)"
                  >
                    Namespace (optional)
                  </label>
                  <input
                    class="input__value "
                    data-testid="input-text"
                    id="Namespace (optional)"
                    name="namespace"
                    type="text"
                    value="My namespace"
                  />
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="mb-1"
              data-testid="input-text-wrapper"
            >
              <div
                class="relative"
              >
                <div
                  aria-label="input-container"
                  class="input group    input--label-up "
                >
                  <div
                    class=""
                  >
                    <label
                      class="translate-y-2 text-sm"
                      for="Port name"
                    >
                      Port name
                    </label>
                    <input
                      class="input__value "
                      data-testid="input-text"
                      id="Port name"
                      name="name"
                      type="text"
                      value="My service-p1234"
                    />
                  </div>
                </div>
              </div>
            </div>
            <p
              class="mb-5 ml-3 text-xs text-neutral-350"
            >
              Port Name allows to customize the subdomain assigned to reach the application
port from the internet. Default value is p&lt;port_number&gt;-&lt;service_name&gt;
            </p>
          </div>
        </div>
        <div
          class="mt-6 flex justify-end gap-3"
        >
          <button
            class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-sm h-10 px-3 rounded-lg text-neutral-subtle hover:bg-surface-neutral-subtle"
            data-testid="cancel-button"
            type="button"
          >
            Cancel
          </button>
          <button
            class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-brand-strong text-sm h-10 px-3 rounded-lg bg-surface-brand-solid hover:bg-surface-brand-solidHover border border-brand-component text-neutralInvert"
            data-testid="submit-button"
            disabled=""
            type="submit"
          >
            Confirm
          </button>
        </div>
      </form>
    </div>
  </div>
</body>
`;
